# mlops

./: .gitignore  Cargo.toml  README.md  dist.py  docker  py-onnx-app.Dockerfile  py-sklearn-app.Dockerfile  pydist.toml  pyproject.toml  todo.md
python/: README.md  explore.py
python/animal_classifier/: app.py  client.py  common.py  onnx.py  onnx_app.py  sklearn.py  sklearn_app.py  train.py
python/test/: test_classifier.py  test_http.py
rust/app/: Cargo.toml
rust/app/src/: main.rs
rust/core/: Cargo.toml
rust/core/src/: lib.rs
server-rs/: Cargo.toml
server-rs/src/: main.rs
